# kakeru

./: .env.example  .gitignore  README.md  README_姫デコ.md  auto_personalized_dm.py  deploy-cloud-run.sh  dockerfile.poster  lefthook.yml  post_video_tweet.py  process_marshmallow_images_to_videos.py  pyproject.toml  requirements-lock.txt  requirements.txt  setup.py  test_x_post.py  video_question_map.csv  姫デコ.py
.github/: pull_request_template.md
api-docs/: api-reference.md  index.html  openapi.json  redoc.html
artifacts/: ps.txt
bot/: __init__.py  accounts.py  cron_scheduler.py  generate_qa_videos.py  main.py  scheduler.py
cityhaven-bot/: .env  IMPROVEMENTS.md  improved_bot.py
docs/: admin-dashboard-therapist-api.md  api-proxy.md  deploy-vercel-supabase.md  doppler-setup.md  himedeco_setup_guide.md  line-webhook-notification-ux.md  matching-v1-notes.md  next-devtools-prompts.md  next16-pr-plan.md  next16-preview-checklist.md  notification-worker.md  notifications-faq.md  ops-mcp.md  p1-completion-summary.md  setup_local.md  specs.md  staging.md
examples/: __init__.py  multi_platform_post.py
figma-to-html/: index.html
kakeru/: __init__.py  __main__.py  accounts.py  cli.py  proxy.py
legacy/: create_test_images.py  generate_qa_videos.py  test_media_files.py  test_niijima_cdp.py  test_niijima_final.py  test_qa_media.py  test_qa_videos.py  test_simple_post.py  test_undetected_chrome.py
osakamenesu/: .dockerignore  .env.example  .env.production.example  .env.template  .gitignore  .mise.toml  AGENT.md  Makefile  README.md  docker-compose.admin-e2e.override.yml  (+14 more)
(+1319 files in other folders)
