[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kakeru"
version = "0.1.0"
description = "Social media automation for men's massage recruitment"
requires-python = ">=3.11"
dependencies = [
    "selenium>=4.0.0",
    "webdriver-manager>=3.8.0",
    "python-dotenv>=0.19.0",
    "openai>=1.0.0",
    "tweepy>=4.0.0",
    "pyyaml>=6.0.0",
    "schedule>=1.1.0",
    "undetected-chromedriver>=3.5.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*", "services*", "utils*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "app.models"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.schemas"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.storage"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.tests.test_ratelimit"
ignore_errors = true
